src/tests/binary-operators/39.txt
binary-operators/39.c:3:27: error: variable 'l' undeclared
 	int i = (1, j = 	2), k = l;
 	                	        ^
